fix overlap of config icon with toggle

--- a/webapp/assets/index.css
+++ b/webapp/assets/index.css
@@ -198,7 +198,7 @@ a:hover {
 
 #advanced-settings {
     position: absolute;
-    top: 5px;
+    top: 40px;
 }
 
 #bottom-container {
